--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "领取优惠券",
+    "navigationBarTitleText": "肖公司优惠券",
     "navigationBarTextStyle": "black",
     "backgroundColor": "#eee"
   },
