feat：新增tab,增加对应的功能
feat：新增tab,增加对应的功能

--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
   "pages": [
-    "pages/index/index"
+    "pages/index/index",
+    "pages/cart/index",
+    "pages/my/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -9,5 +11,31 @@
     "navigationBarTextStyle": "black",
     "backgroundColor": "#eee"
   },
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "tabBar": {
+    "color": "#6e6d6b",
+    "selectedColor": "#f9f027",
+    "borderStyle": "white",
+    "backgroundColor": "#292929",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "iconPath": "pages/images/footer-icon-01.png",
+        "selectedIconPath": "pages/images/footer-icon-01-active.png",
+        "text": "首页"
+      },
+      {
+        "pagePath": "pages/cart/index",
+        "iconPath": "pages/images/footer-icon-03.png",
+        "selectedIconPath": "pages/images/footer-icon-03-active.png",
+        "text": "购物车"
+      },
+      {
+        "pagePath": "pages/my/index",
+        "iconPath": "pages/images/footer-icon-04.png",
+        "selectedIconPath": "pages/images/footer-icon-04-active.png",
+        "text": "我的"
+      }
+    ]
+  }
 }
